--- a/watering-irrigation/how-slope-affects-lawn-watering.html
+++ b/watering-irrigation/how-slope-affects-lawn-watering.html
@@ -6,7 +6,7 @@
 
   <title>How Slope Affects Lawn Watering</title>
   <meta name="description" content="Slope changes where water goes the moment it hits the ground. Even small angles can turn a full watering into uneven soaking and uneven stress.">
-  <link rel="canonical" href="https://grizzlygreens.net/soil-fertilizer/how-slope-affects-lawn-watering.html">
+  <link rel="canonical" href="https://grizzlygreens.net/watering-irrigation/how-slope-affects-lawn-watering.html">
 
   <link rel="stylesheet" href="/styles.css">
   <link rel="icon" href="/favicon.ico">
@@ -23,7 +23,7 @@
   <meta property="og:site_name" content="GrizzlyGreens.net">
   <meta property="og:title" content="How Slope Affects Lawn Watering">
   <meta property="og:description" content="Slope changes where water goes the moment it hits the ground. Even small angles can turn a full watering into uneven soaking and uneven stress.">
-  <meta property="og:url" content="https://grizzlygreens.net/soil-fertilizer/how-slope-affects-lawn-watering.html">
+  <meta property="og:url" content="https://grizzlygreens.net/watering-irrigation/how-slope-affects-lawn-watering.html">
   <meta property="og:image" content="https://grizzlygreens.net/og-default.png">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
@@ -48,7 +48,7 @@
     <a href="/lawn-basics/" class="nav-link">Lawn &amp; Grass Basics</a>
     <a href="/weeds-pests/" class="nav-link">Weeds, Pests &amp; Disease</a>
     <a href="/watering-irrigation/" class="nav-link">Watering, Irrigation &amp; Drainage</a>
-    <a href="/soil-fertilizer/" class="nav-link">Soil, Fertilizer &amp; Amendments</a>
+    <a href="/watering-irrigation/" class="nav-link">Soil, Fertilizer &amp; Amendments</a>
     <a href="/tools-safety/" class="nav-link">Tools &amp; Yard Safety</a>
   </nav>
 </header>
