--- a/watering-irrigation/why-lawns-stay-wet-too-long.html
+++ b/watering-irrigation/why-lawns-stay-wet-too-long.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Why Lawns Stay Wet Too Long</title>
-  <meta name="description" content="Lawns stay wet too long when water outpaces the soil’s ability to move, release, and rebalance moisture. The problem is not excess water alone, but stalled recovery.">
-  <link rel="canonical" href="https://grizzlygreens.net/soil-fertilizer/why-lawns-stay-wet-too-long.html">
+  <meta name="description" content="Lawns stay wet too long when water movement slows below the soil surface. Moisture lingers, recovery stalls, and damage builds quietly over time.">
+  <link rel="canonical" href="https://grizzlygreens.net/watering-irrigation/why-lawns-stay-wet-too-long.html">
 
   <link rel="stylesheet" href="/styles.css">
   <link rel="icon" href="/favicon.ico">
@@ -14,7 +14,7 @@
 
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Why Lawns Stay Wet Too Long">
-  <meta name="twitter:description" content="Lawns stay wet too long when water outpaces the soil’s ability to move, release, and rebalance moisture. The problem is not excess water alone, but stalled recovery.">
+  <meta name="twitter:description" content="Lawns stay wet too long when water movement slows below the soil surface. Moisture lingers, recovery stalls, and damage builds quietly over time.">
   <meta name="twitter:image" content="https://grizzlygreens.net/og-default.png">
   <meta name="twitter:image:alt" content="Default preview image for GrizzlyGreens.net">
 
@@ -22,8 +22,8 @@
   <meta property="og:type" content="article">
   <meta property="og:site_name" content="GrizzlyGreens.net">
   <meta property="og:title" content="Why Lawns Stay Wet Too Long">
-  <meta property="og:description" content="Lawns stay wet too long when water outpaces the soil’s ability to move, release, and rebalance moisture. The problem is not excess water alone, but stalled recovery.">
-  <meta property="og:url" content="https://grizzlygreens.net/soil-fertilizer/why-lawns-stay-wet-too-long.html">
+  <meta property="og:description" content="Lawns stay wet too long when water movement slows below the soil surface. Moisture lingers, recovery stalls, and damage builds quietly over time.">
+  <meta property="og:url" content="https://grizzlygreens.net/watering-irrigation/why-lawns-stay-wet-too-long.html">
   <meta property="og:image" content="https://grizzlygreens.net/og-default.png">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
@@ -48,7 +48,7 @@
     <a href="/lawn-basics/" class="nav-link">Lawn &amp; Grass Basics</a>
     <a href="/weeds-pests/" class="nav-link">Weeds, Pests &amp; Disease</a>
     <a href="/watering-irrigation/" class="nav-link">Watering, Irrigation &amp; Drainage</a>
-    <a href="/soil-fertilizer/" class="nav-link">Soil, Fertilizer &amp; Amendments</a>
+    <a href="/watering-irrigation/" class="nav-link">Soil, Fertilizer &amp; Amendments</a>
     <a href="/tools-safety/" class="nav-link">Tools &amp; Yard Safety</a>
   </nav>
 </header>
@@ -56,45 +56,45 @@
 <main class="container">
   <h1>Why Lawns Stay Wet Too Long</h1>
 
-  <h2>Water enters faster than it can leave</h2>
-  <p>Every lawn has a limit to how much water it can process at once.</p>
-  <p>When that limit is exceeded, moisture stacks up instead of moving through. The surface stays dark and soft even though watering may have already stopped.</p>
+  <h2>Water movement slows before it ever drains</h2>
+  <p>Lawns do not stay wet because water refuses to leave. They stay wet because movement below the surface slows to a crawl.</p>
+  <p>Once water fills pore space faster than it can exit, drying becomes a waiting game instead of a process.</p>
 
-  <h2>Drainage stalls before puddles ever appear</h2>
-  <p>A lawn does not need standing water to be overloaded.</p>
-  <p>Excess moisture can remain trapped below the surface, slowing air movement and preventing the soil from resetting. The grass reacts later, long after the watering cycle is forgotten.</p>
+  <h2>Surface appearance hides subsurface overload</h2>
+  <p>A lawn can look calm while holding too much moisture underneath.</p>
+  <p>No puddles form, blades stay upright, and nothing looks wrong. But air exchange drops, roots lose oxygen, and recovery quietly pauses.</p>
 
-  <h2>Recovery time stretches with each cycle</h2>
-  <p>Soil needs downtime between watering events to rebalance moisture.</p>
-  <p>When watering resumes too soon, the lawn never completes that recovery window. This slow stacking effect explains why problems develop even under schedules meant to be safe.</p>
+  <h2>Each watering shortens the recovery window</h2>
+  <p>Soil needs uninterrupted time to rebalance after moisture enters.</p>
+  <p>If watering returns before that process finishes, the lawn never resets. The effect stacks slowly, which is why problems develop even under schedules that seem reasonable.</p>
 
-  <h2>New growth exaggerates moisture retention</h2>
-  <p>Young grass holds water differently because roots are shallow and soil structure is still forming.</p>
-  <p>Extra moisture can linger longer than expected during establishment, which is why timing matters so much during early growth as outlined in <a href="/watering-irrigation/how-long-new-grass-needs-extra-water.html">How Long New Grass Needs Extra Water</a>.</p>
+  <h2>Young turf holds water longer than expected</h2>
+  <p>New lawns behave differently because root systems are shallow and soil structure is still loose.</p>
+  <p>Extra moisture tends to linger during establishment, especially during the extended support period described in <a href="/watering-irrigation/how-long-new-grass-needs-extra-water.html">How Long New Grass Needs Extra Water</a>, when frequent watering is common.</p>
 
-  <h2>Surface softness hides deeper imbalance</h2>
-  <p>Wet lawns often feel spongy underfoot.</p>
-  <p>That softness is not cushioning. It is a sign that soil particles are suspended in water instead of supporting structure, delaying stabilization.</p>
+  <h2>Soft ground signals delayed stabilization</h2>
+  <p>When turf feels spongy underfoot, structure has not re-formed.</p>
+  <p>Soil particles are suspended instead of interlocked, slowing drainage and prolonging wet conditions even after watering stops.</p>
 
-  <h2>Excess moisture masks other failures</h2>
-  <p>Lawns can look green and active while roots quietly weaken.</p>
-  <p>This is why some yards decline despite consistent watering, a pattern explored further in <a href="/watering-irrigation/why-lawns-fail-despite-regular-watering.html">Why Lawns Fail Despite Regular Watering</a>.</p>
+  <h2>Green color can mask declining roots</h2>
+  <p>Moisture-heavy lawns often stay green while strength fades.</p>
+  <p>This false stability explains why some lawns deteriorate under consistent care, a pattern explored further in <a href="/watering-irrigation/why-lawns-fail-despite-regular-watering.html">Why Lawns Fail Despite Regular Watering</a>.</p>
 
-  <h2>Dry periods reveal the damage late</h2>
-  <p>When watering finally slows or stops, weakened root systems are exposed.</p>
-  <p>Recovery becomes uneven, and stress shows up faster than expected. Whether the lawn can rebound depends on how much structure remains, which ties into <a href="/watering-irrigation/can-lawns-recover-after-drought.html">Can Lawns Recover After Drought</a>.</p>
+  <h2>Dry weather exposes the weakness late</h2>
+  <p>When watering is reduced or heat increases, shallow roots have nothing to fall back on.</p>
+  <p>Stress appears quickly, and recovery becomes uneven. Whether the lawn can rebound depends on how much structure survived, as discussed in <a href="/watering-irrigation/can-lawns-recover-after-drought.html">Can Lawns Recover After Drought</a>.</p>
 
-  <h2>Chronic saturation resets expectations downward</h2>
-  <p>Grass adapts to wet conditions by reducing depth and resilience.</p>
-  <p>Once that adaptation sets in, normal moisture levels can feel like drought to the plant.</p>
+  <h2>Chronic wetness resets grass tolerance</h2>
+  <p>Grass adapts to constant moisture by reducing depth.</p>
+  <p>Once adapted, normal drying feels extreme, and the lawn reacts poorly even under average conditions.</p>
 
-  <h2>Repeated wetness creates a narrowing path forward</h2>
-  <p>Each cycle of stalled drying reduces options for recovery.</p>
-  <p>At a certain point, correction becomes more disruptive than starting fresh, which is when <a href="/watering-irrigation/when-lawn-water-issues-mean-starting-over.html">When Lawn Water Issues Mean Starting Over</a> becomes relevant.</p>
+  <h2>Options narrow as saturation repeats</h2>
+  <p>Each cycle of prolonged wetness reduces the margin for correction.</p>
+  <p>Eventually the disruption required to restore balance exceeds the lawn’s remaining strength, which is when <a href="/watering-irrigation/when-lawn-water-issues-mean-starting-over.html">When Lawn Water Issues Mean Starting Over</a> becomes a real consideration.</p>
 
-  <h2>Persistent wetness is a system signal</h2>
-  <p>Lawns that stay wet too long are not absorbing water correctly.</p>
-  <p>They are signaling that movement, balance, and recovery have fallen out of sync, and until that changes, moisture will remain a problem rather than a benefit.</p>
+  <h2>Persistent moisture is a warning, not a condition</h2>
+  <p>Lawns that stay wet too long are signaling a breakdown in movement and recovery.</p>
+  <p>Until that signal is addressed, added water continues to slow progress rather than support growth.</p>
 </main>
 
 <footer class="site-footer">
