--- a/watering-irrigation/how-often-lawns-should-be-watered.html
+++ b/watering-irrigation/how-often-lawns-should-be-watered.html
@@ -48,7 +48,7 @@
     <a href="/lawn-basics/" class="nav-link">Lawn &amp; Grass Basics</a>
     <a href="/weeds-pests/" class="nav-link">Weeds, Pests &amp; Disease</a>
     <a href="/watering-irrigation/" class="nav-link">Watering, Irrigation &amp; Drainage</a>
-    <a href="/soil-fertilizer/" class="nav-link">Soil, Fertilizer &amp; Amendments</a>
+    <a href="/watering-irrigation/" class="nav-link">Soil, Fertilizer &amp; Amendments</a>
     <a href="/tools-safety/" class="nav-link">Tools &amp; Yard Safety</a>
   </nav>
 </header>
