--- a/watering-irrigation/how-to-water-sloped-lawns-properly.html
+++ b/watering-irrigation/how-to-water-sloped-lawns-properly.html
@@ -6,7 +6,7 @@
 
   <title>How to Water Sloped Lawns Properly</title>
   <meta name="description" content="Sloped lawns fail when water moves away faster than soil can absorb it. The real issue is contact time, not how much water is applied.">
-  <link rel="canonical" href="https://grizzlygreens.net/soil-fertilizer/how-to-water-sloped-lawns-properly.html">
+  <link rel="canonical" href="https://grizzlygreens.net/watering-irrigation/how-to-water-sloped-lawns-properly.html">
 
   <link rel="stylesheet" href="/styles.css">
   <link rel="icon" href="/favicon.ico">
@@ -23,7 +23,7 @@
   <meta property="og:site_name" content="GrizzlyGreens.net">
   <meta property="og:title" content="How to Water Sloped Lawns Properly">
   <meta property="og:description" content="Sloped lawns fail when water moves away faster than soil can absorb it. The real issue is contact time, not how much water is applied.">
-  <meta property="og:url" content="https://grizzlygreens.net/soil-fertilizer/how-to-water-sloped-lawns-properly.html">
+  <meta property="og:url" content="https://grizzlygreens.net/watering-irrigation/how-to-water-sloped-lawns-properly.html">
   <meta property="og:image" content="https://grizzlygreens.net/og-default.png">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
@@ -48,7 +48,7 @@
     <a href="/lawn-basics/" class="nav-link">Lawn &amp; Grass Basics</a>
     <a href="/weeds-pests/" class="nav-link">Weeds, Pests &amp; Disease</a>
     <a href="/watering-irrigation/" class="nav-link">Watering, Irrigation &amp; Drainage</a>
-    <a href="/soil-fertilizer/" class="nav-link">Soil, Fertilizer &amp; Amendments</a>
+    <a href="/watering-irrigation/" class="nav-link">Soil, Fertilizer &amp; Amendments</a>
     <a href="/tools-safety/" class="nav-link">Tools &amp; Yard Safety</a>
   </nav>
 </header>
