--- a/watering-irrigation/how-shade-affects-water-needs.html
+++ b/watering-irrigation/how-shade-affects-water-needs.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>How Shade Affects Water Needs</title>
-  <meta name="description" content="Shade changes how long moisture stays usable in the lawn. Lower evaporation alters drying speed, stress patterns, and drainage behavior.">
+  <meta name="description" content="Shade changes how long water stays active in the soil and how slowly lawns recover. Lower evaporation reduces demand but increases risk when moisture lingers.">
   <link rel="canonical" href="https://grizzlygreens.net/watering-irrigation/how-shade-affects-water-needs.html">
 
   <link rel="stylesheet" href="/styles.css">
@@ -14,7 +14,7 @@
 
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="How Shade Affects Water Needs">
-  <meta name="twitter:description" content="Shade changes how long moisture stays usable in the lawn. Lower evaporation alters drying speed, stress patterns, and drainage behavior.">
+  <meta name="twitter:description" content="Shade changes how long water stays active in the soil and how slowly lawns recover. Lower evaporation reduces demand but increases risk when moisture lingers.">
   <meta name="twitter:image" content="https://grizzlygreens.net/og-default.png">
   <meta name="twitter:image:alt" content="Default preview image for GrizzlyGreens.net">
 
@@ -22,7 +22,7 @@
   <meta property="og:type" content="article">
   <meta property="og:site_name" content="GrizzlyGreens.net">
   <meta property="og:title" content="How Shade Affects Water Needs">
-  <meta property="og:description" content="Shade changes how long moisture stays usable in the lawn. Lower evaporation alters drying speed, stress patterns, and drainage behavior.">
+  <meta property="og:description" content="Shade changes how long water stays active in the soil and how slowly lawns recover. Lower evaporation reduces demand but increases risk when moisture lingers.">
   <meta property="og:url" content="https://grizzlygreens.net/watering-irrigation/how-shade-affects-water-needs.html">
   <meta property="og:image" content="https://grizzlygreens.net/og-default.png">
   <meta property="og:image:width" content="1200">
@@ -56,45 +56,45 @@
 <main class="container">
   <h1>How Shade Affects Water Needs</h1>
 
-  <h2>Evaporation slows under reduced sunlight</h2>
-  <p>Shade limits how quickly moisture leaves the surface.</p>
-  <p>Water stays longer in shaded areas even when temperatures are similar. This changes how often grass actually needs replacement moisture.</p>
+  <h2>Evaporation slows without direct sun</h2>
+  <p>Shade reduces the energy that pulls moisture out of the soil. Water that would normally disappear within a few hours can remain active well into the next day.</p>
+  <p>This slower loss changes how often water actually needs to be replaced.</p>
 
-  <h2>Drying speed becomes uneven across the lawn</h2>
-  <p>Sunlit sections and shaded sections rarely behave the same.</p>
-  <p>One area may dry out while another remains damp, creating stress patterns that are easy to miss during routine watering.</p>
+  <h2>Longer moisture presence does not equal better hydration</h2>
+  <p>Water eventually stops helping roots if it lingers too long.</p>
+  <p>Once oxygen exchange drops, recovery stalls and roots begin operating under stress even though the soil still feels wet.</p>
 
-  <h2>Shaded lawns often hold moisture past usefulness</h2>
-  <p>Water that lingers too long stops helping roots.</p>
-  <p>Instead of supporting uptake, excess moisture blocks oxygen and slows recovery, which explains conditions described in <a href="/watering-irrigation/why-some-lawns-never-dry-out.html">Why Some Lawns Never Dry Out</a>.</p>
+  <h2>Drying patterns fracture across the lawn</h2>
+  <p>A shaded strip can behave like a different yard entirely.</p>
+  <p>While nearby sunlit grass dries and recovers, shaded sections may stay damp and unresponsive. This uneven behavior often leads to conditions described in <a href="/watering-irrigation/why-some-lawns-never-dry-out.html">Why Some Lawns Never Dry Out</a>.</p>
 
-  <h2>Root demand drops before leaf demand does</h2>
-  <p>Grass in shade grows more slowly.</p>
-  <p>Lower growth means lower water use below ground, even if leaves still look active.</p>
+  <h2>Water demand drops before visual cues change</h2>
+  <p>Grass growth slows in shade long before color fades.</p>
+  <p>Roots pull less water as growth rate declines, but leaves can stay green, masking the reduced demand underneath.</p>
 
-  <h2>Shade changes how slope influences moisture loss</h2>
-  <p>On sloped ground, shade alters runoff timing.</p>
-  <p>Water may move slowly instead of quickly escaping, changing expectations tied to <a href="/watering-irrigation/how-to-water-sloped-lawns-properly.html">How to Water Sloped Lawns Properly</a>.</p>
+  <h2>Slope behavior shifts when shade is added</h2>
+  <p>Gravity still matters, but shade alters timing.</p>
+  <p>Water may move slowly across a shaded slope instead of running off quickly, soaking shallow layers and lingering where roots are weakest. This complicates assumptions tied to <a href="/watering-irrigation/how-to-water-sloped-lawns-properly.html">How to Water Sloped Lawns Properly</a>.</p>
 
-  <h2>Drainage behavior matters more in low light</h2>
-  <p>When evaporation is limited, drainage does the work.</p>
-  <p>If subsurface movement is restricted, moisture accumulates regardless of how much water is applied. This distinction aligns with <a href="/watering-irrigation/difference-between-surface-and-subsurface-dra.html">Difference Between Surface and Subsurface Drainage</a>.</p>
+  <h2>Drainage limitations become dominant</h2>
+  <p>When evaporation is no longer doing much work, drainage takes over.</p>
+  <p>If water cannot move downward efficiently, it accumulates regardless of how carefully water is applied. This separation between surface behavior and subsurface movement mirrors <a href="/watering-irrigation/difference-between-surface-and-subsurface-dra.html">Difference Between Surface and Subsurface Drainage</a>.</p>
 
-  <h2>Visual cues lag behind soil conditions</h2>
-  <p>Shaded grass often stays green longer.</p>
-  <p>That appearance hides underlying saturation and delays recognition of stress until damage is already underway.</p>
+  <h2>Green appearance hides internal stress</h2>
+  <p>Shade preserves color longer than sun.</p>
+  <p>That visual stability delays recognition of saturation and oxygen loss below the surface.</p>
 
-  <h2>Shaded areas recover more slowly</h2>
-  <p>Lower light reduces growth response.</p>
-  <p>When stress occurs, recovery stretches out, keeping soil in a partially stressed state longer than sun-exposed turf.</p>
+  <h2>Recovery stretches out once stress begins</h2>
+  <p>Lower light limits regrowth speed.</p>
+  <p>When problems start, shaded areas stay stressed longer because they cannot rebuild tissue or root mass as quickly.</p>
 
   <h2>Uniform watering creates uneven results</h2>
-  <p>Applying the same volume everywhere ignores shade effects.</p>
-  <p>Some areas accumulate excess while others barely meet demand.</p>
+  <p>Applying the same volume everywhere assumes uniform drying.</p>
+  <p>In shaded lawns, that assumption fails, leading to excess in some areas and deficiency in others.</p>
 
-  <h2>Shade lowers water needs but raises risk</h2>
-  <p>Less evaporation means less frequent demand.</p>
-  <p>At the same time, slower drying increases the chance of long-term moisture problems if water behavior is not understood.</p>
+  <h2>Shade lowers demand but raises stakes</h2>
+  <p>Less evaporation means less frequent water is needed.</p>
+  <p>At the same time, mistakes linger longer, making timing and recovery more important than total volume.</p>
 </main>
 
 <footer class="site-footer">
