--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   <main class="container">
     <section class="hero">
   <h1>Welcome to Grizzly Greens</h1>
-  <p class="subtitle">Fast, practical lawn and yard knowledge. No fluff.</p>
+  <p class="subtitle">Fast, practical lawn and yard knowledge.</p>
 </section>
 <section class="cards">
   <article class="card card-link">
